@@ -568,7 +568,7 @@ bool Editor::canDecreaseSelectionListLevel()
 PassRefPtr<Node> Editor::increaseSelectionListLevel()
 {
     if (!canEditRichly() || m_frame->selectionController()->isNone())
-        return nil;
+        return 0;
     
     RefPtr<Node> newList = IncreaseSelectionListLevelCommand::increaseSelectionListLevel(m_frame->document());
     m_frame->revealSelection(RenderLayer::gAlignToEdgeIfNeeded);
@@ -578,7 +578,7 @@ PassRefPtr<Node> Editor::increaseSelectionListLevel()
 PassRefPtr<Node> Editor::increaseSelectionListLevelOrdered()
 {
     if (!canEditRichly() || m_frame->selectionController()->isNone())
-        return nil;
+        return 0;
     
     PassRefPtr<Node> newList = IncreaseSelectionListLevelCommand::increaseSelectionListLevelOrdered(m_frame->document());
     m_frame->revealSelection(RenderLayer::gAlignToEdgeIfNeeded);
@@ -588,7 +588,7 @@ PassRefPtr<Node> Editor::increaseSelectionListLevelOrdered()
 PassRefPtr<Node> Editor::increaseSelectionListLevelUnordered()
 {
     if (!canEditRichly() || m_frame->selectionController()->isNone())
-        return nil;
+        return 0;
     
     PassRefPtr<Node> newList = IncreaseSelectionListLevelCommand::increaseSelectionListLevelUnordered(m_frame->document());
     m_frame->revealSelection(RenderLayer::gAlignToEdgeIfNeeded);
