@@ -1,3 +1,12 @@
+2007-04-28  Mark Rowe  <mrowe@apple.com>
+
+        Build fix.  Change use of nil to 0 in C++ source file.
+
+        * editing/Editor.cpp:
+        (WebCore::Editor::increaseSelectionListLevel):
+        (WebCore::Editor::increaseSelectionListLevelOrdered):
+        (WebCore::Editor::increaseSelectionListLevelUnordered):
+
 2007-04-28  Darin Adler  <darin@apple.com>
 
         Reviewed by Adele.
